--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,15 @@ body{
     margin: 0;
 }
 
-#logo{
+#app{
     width: 100vw;
     height: 100vh;
+}
+
+#logo{
+    width: 100%;
+    height: 100%;
     background-color: black;
-    overflow: auto;
+    overflow: hidden;
+    box-sizing: border-box;
 }
